--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"server": "nodemon index.js"
+		"server": "nodemon index.js",
+		"client": "npm run start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"concurrently": "^4.1.1",
 		"express": "^4.17.1",
 		"mongoose": "^5.6.7"
 	}
