--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-quill": "^1.3.3",
     "react-scripts": "3.0.1",
     "typescript": "^3.5.3"
   },
