--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"concurrently": "^4.1.1",
 		"express": "^4.17.1",
-		"mongoose": "^5.6.7"
+		"mongoose": "^5.6.7",
+		"nodemon": "^1.19.1"
 	}
 }
