--- a/client/package.json
+++ b/client/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.9.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
