--- a/client/package.json
+++ b/client/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "html-to-react": "^1.4.1",
-    "lodash": "^4.17.15",
-    "ramda": "^0.26.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-quill": "^1.3.3",
-    "react-redux": "^7.1.1",
-    "react-scripts": "3.0.1",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^3.5.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-test-renderer": "^16.9.0",
-    "redux-mock-store": "^1.5.3"
-  }
+   "name": "client",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "html-to-react": "^1.4.1",
+      "lodash": "^4.17.15",
+      "ramda": "^0.26.1",
+      "react": "^16.8.6",
+      "react-dom": "^16.8.6",
+      "react-quill": "^1.3.3",
+      "react-redux": "^7.1.1",
+      "react-scripts": "3.0.1",
+      "redux": "^4.0.4",
+      "redux-form": "^8.1.0",
+      "redux-thunk": "^2.3.0",
+      "typescript": "^3.5.3"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "test:coverage": "react-scripts test --coverage",
+      "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
+      "eject": "react-scripts eject"
+   },
+   "eslintConfig": {
+      "extends": "react-app"
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "enzyme": "^3.10.0",
+      "enzyme-adapter-react-16": "^1.14.0",
+      "react-test-renderer": "^16.9.0",
+      "redux-mock-store": "^1.5.3"
+   }
 }
