--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,8 @@
       ]
    },
    "devDependencies": {
+      "@testing-library/jest-dom": "^4.2.3",
+      "@testing-library/react": "^9.3.1",
       "enzyme": "^3.10.0",
       "enzyme-adapter-react-16": "^1.14.0",
       "react-test-renderer": "^16.9.0",
