--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
       "html-to-react": "^1.4.1",
       "ramda": "^0.26.1",
       "react": "^16.8.6",
+      "react-dnd": "^10.0.2",
+      "react-dnd-html5-backend": "^10.0.2",
       "react-dom": "^16.8.6",
       "react-quill": "^1.3.3",
       "react-redux": "^7.1.1",
