--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,21 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
-      "html-to-react": "^1.4.1",
+      "axios": "^0.19.2",
+      "html-to-react": "^1.4.2",
+      "http-proxy-middleware": "^0.21.0",
       "ramda": "^0.26.1",
-      "react": "^16.8.6",
+      "react": "^16.13.1",
       "react-dnd": "^10.0.2",
       "react-dnd-html5-backend": "^10.0.2",
-      "react-dom": "^16.8.6",
-      "react-redux": "^7.1.1",
-      "react-scripts": "^3.3.0",
-      "redux": "^4.0.4",
-      "redux-form": "^8.1.0",
+      "react-dom": "^16.13.1",
+      "react-redux": "^7.2.0",
+      "react-scripts": "^3.4.1",
+      "redux": "^4.0.5",
+      "redux-form": "^8.3.1",
       "redux-thunk": "^2.3.0",
-      "tailwindcss": "^1.1.4",
-      "typescript": "^3.5.3"
+      "tailwindcss": "^1.2.0",
+      "typescript": "^3.8.3"
    },
    "scripts": {
       "tailwind:css": "tailwind build src/css/tailwind.src.css -c  tailwind.config.js -o src/css/tailwind.css",
@@ -42,11 +44,11 @@
       ]
    },
    "devDependencies": {
-      "@testing-library/jest-dom": "^4.2.3",
-      "@testing-library/react": "^9.3.1",
-      "enzyme": "^3.10.0",
-      "enzyme-adapter-react-16": "^1.14.0",
-      "react-test-renderer": "^16.9.0",
-      "redux-mock-store": "^1.5.3"
+      "@testing-library/jest-dom": "^4.2.4",
+      "@testing-library/react": "^9.5.0",
+      "enzyme": "^3.11.0",
+      "enzyme-adapter-react-16": "^1.15.2",
+      "react-test-renderer": "^16.13.1",
+      "redux-mock-store": "^1.5.4"
    }
 }
