--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 	"dependencies": {
 		"concurrently": "^4.1.2",
 		"express": "^4.17.1",
+		"express-graphql": "^0.9.0",
+		"graphql": "^15.0.0",
 		"mongoose": "^5.9.7",
-		"nodemon": "^1.19.4"
+		"nodemon": "^1.19.4",
+		"ramda": "^0.27.0"
 	}
 }
