--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@apollo/react-hooks": "^3.1.5",
+      "apollo-boost": "^0.4.9",
       "apollo-cache-inmemory": "^1.6.5",
       "apollo-client": "^2.6.8",
       "apollo-link-http": "^1.5.17",
