--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-	"name": "server",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"server": "nodemon index.js",
-		"client": "npm run start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"concurrently": "^4.1.2",
-		"cors": "^2.8.5",
-		"express": "^4.17.1",
-		"express-graphql": "^0.9.0",
-		"graphql": "^15.0.0",
-		"mongoose": "^5.9.21",
-		"nodemon": "^1.19.4",
-		"ramda": "^0.27.0"
-	}
+   "name": "server",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "server": "nodemon ./server/index.js",
+      "client": "npm run start --prefix client",
+      "dev": "concurrently \"npm run server\" \"npm run client\""
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "concurrently": "^4.1.2",
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "express-graphql": "^0.9.0",
+      "graphql": "^15.0.0",
+      "mongoose": "^5.9.21",
+      "nodemon": "^1.19.4",
+      "ramda": "^0.27.0"
+   }
 }
