--- a/client/package.json
+++ b/client/package.json
@@ -22,13 +22,11 @@
       "redux": "^4.0.5",
       "redux-form": "^8.3.1",
       "redux-thunk": "^2.3.0",
-      "tailwindcss": "^1.2.0",
       "typescript": "^3.8.3"
    },
    "scripts": {
-      "tailwind:css": "tailwind build src/css/tailwind.src.css -c  tailwind.config.js -o src/css/tailwind.css",
-      "start": "npm run tailwind:css && react-scripts start",
-      "build": "npm run tailwind:css && react-scripts build",
+      "start": "react-scripts start",
+      "build": "react-scripts build",
       "test": "react-scripts test",
       "test:coverage": "react-scripts test --coverage",
       "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
