--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
    "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
+      "tailwind:css": "tailwind build client/src/css/tailwind.src.css -c client/tailwind.config.js -o client/src/css/tailwind.css",
       "server": "nodemon ./server/index.js",
       "client": "npm run start --prefix client",
-      "dev": "concurrently \"npm run server\" \"npm run client\"",
-      "build": "npm install --prefix client &&  npm run build --prefix client"
+      "dev": "npm run tailwind:css && concurrently \"npm run server\" \"npm run client\"",
+      "postinstall": "cd client && npm install",
+      "prebuild": "npm run tailwind:css",
+      "build": "npm run build --prefix client"
    },
    "author": "",
    "license": "ISC",
@@ -20,6 +23,7 @@
       "graphql": "^15.0.0",
       "mongoose": "^5.9.21",
       "nodemon": "^1.19.4",
+      "tailwindcss": "^1.2.0",
       "ramda": "^0.27.0"
    }
 }
