--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "dev": "npm run tailwind:css && concurrently \"npm run server\" \"npm run client\"",
       "postinstall": "cd client && npm install",
       "prebuild": "npm run tailwind:css",
-      "build": "npm run build --prefix client"
+      "build": "cd client && npm run build"
    },
    "author": "",
    "license": "ISC",
