--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "graphql": "^15.0.0",
       "mongoose": "^5.9.21",
       "nodemon": "^1.19.4",
-      "tailwindcss": "^1.2.0",
-      "ramda": "^0.27.0"
+      "ramda": "^0.27.0",
+      "tailwindcss": "^1.2.0"
    }
 }
