--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "tailwind:css": "tailwind build client/src/css/tailwind.src.css -c client/tailwind.config.js -o client/src/css/tailwind.css",
       "server": "nodemon ./server/index.js",
       "client": "npm run start --prefix client",
-      "dev": "npm run tailwind:css && concurrently \"npm run server\" \"npm run client\"",
+      "dev": "npm run tailwind:css && concurrently \"npm run server\" \"npm run client\" \"npm run lambda\"",
       "postinstall": "cd server && npm install && cd ../client && npm install",
       "prebuild": "npm run tailwind:css",
       "build": "cd client && npm run build && cd ../server && npm run build:lambda",
