--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -1,6 +1,6 @@
 # /server netlify.toml
 [build]
-  functions = "server/lambda" # netlify dev uses this directory to scaffold and serve your functions
+  functions = "lambda" # netlify dev uses this directory to scaffold and serve your functions
   
 # note: each of these fields are OPTIONAL, with an exception that when you're specifying "command" and "port", you must specify framework = "#custom"
 [dev]
