--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
    "description": "The client folder for Deepsheet",
    "author": "Simon Amarasingham",
    "private": true,
+   "proxy": "http://localhost:9000",
    "dependencies": {
       "@apollo/react-hooks": "^3.1.5",
       "apollo-boost": "^0.4.9",
