added npm install serverLambda

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
       "lambda": "npm run lambda --prefix serverLambda",
       "client": "npm run start --prefix client",
       "dev": "npm run tailwind:css && concurrently \"npm run client\" \"npm run lambda\"",
-      "postinstall": "cd server && npm install && cd ../client && npm install",
+      "postinstall": "cd serverLambda && npm install && cd ../client && npm install",
       "prebuild": "npm run tailwind:css",
       "build": "cd client && npm run build && cd ../serverLambda && npm run build:lambda"
    },
