--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # root netlify.toml
 [build]
   command = "npm run build"
-  # functions = "server/lambda" # netlify dev uses this directory to scaffold and serve your functions
+  # functions = "serverlambda/lambda" # netlify dev uses this directory to scaffold and serve your functions
   # publish = "client/build" # directory where deploy-ready HTML files etc are. Don't seem to need to specify this as it is set in the UI 
 
 # note: each of these fields are OPTIONAL, with an exception that when you're specifying "command" and "port", you must specify framework = "#custom"
