--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ dev.js
 # Local Netlify folder
 .netlify
 
+# probably can delete these
+old-graphql_js.txt
+old-resolvers_js.txt
+
 # lambda functions build dir
 /server/lambda
 /serverLambda/lambda
