--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "author": "Simon Amarasingham",
    "repository": "https://github.com/simonrumi/deepsheet",
    "license": "ISC",
-   "main": "index.js",
+   "proxy": "http://localhost:9000",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "tailwind:css": "tailwind build client/src/css/tailwind.src.css -c client/tailwind.config.js -o client/src/css/tailwind.css",
