--- a/serverLambda/package.json
+++ b/serverLambda/package.json
@@ -7,6 +7,7 @@
    "dependencies": {
       "apollo-server-lambda": "^2.16.1",
       "aws4": "^1.10.1",
+      "axios": "^0.20.0",
       "bufferutil": "^4.0.1",
       "graphql": "^15.0.0",
       "mongodb": "^3.6.0",
