--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
       "react-dnd": "^10.0.2",
       "react-dnd-html5-backend": "^10.0.2",
       "react-dom": "^16.13.1",
+      "react-google-login": "^5.1.21",
       "react-redux": "^7.2.0",
       "react-scripts": "^3.4.1",
       "redux": "^4.0.5",
