--- a/serverLambda/package.json
+++ b/serverLambda/package.json
@@ -9,6 +9,7 @@
       "aws4": "^1.10.1",
       "axios": "^0.20.0",
       "bufferutil": "^4.0.1",
+      "google-auth-library": "^6.0.6",
       "graphql": "^15.0.0",
       "mongodb": "^3.6.0",
       "mongodb-client-encryption": "^1.1.0",
