--- a/serverLambda/package.json
+++ b/serverLambda/package.json
@@ -5,6 +5,7 @@
    "author": "Simon Amarasingham",
    "license": "ISC",
    "dependencies": {
+      "@middy/core": "^1.4.0",
       "apollo-server-lambda": "^2.16.1",
       "aws4": "^1.10.1",
       "axios": "^0.20.0",
