--- a/serverLambda/package.json
+++ b/serverLambda/package.json
@@ -8,9 +8,9 @@
       "@middy/core": "^1.4.0",
       "apollo-server-lambda": "^2.16.1",
       "aws4": "^1.10.1",
-      "axios": "^0.20.0",
+      "axios": "^0.21.1",
       "bufferutil": "^4.0.1",
-      "google-auth-library": "^6.0.6",
+      "googleapis": "^67.0.0",
       "graphql": "^15.0.0",
       "mongodb": "^3.6.0",
       "mongodb-client-encryption": "^1.1.0",
