--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
       "redux": "^4.0.5",
       "redux-form": "^8.3.1",
       "redux-thunk": "^2.3.0",
+      "sanctuary": "^3.1.0",
       "typescript": "^3.8.3"
    },
    "scripts": {
