--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Deep Sheet",
-	"name": "Get yourself into Deep Sheet",
+	"short_name": "Deep Deep Sheet",
+	"name": "Deep Deep Sheet - a spreadsheet for organization, not calculation",
 	"icons": [
 		{
 			"src": "spreadsheet.ico",
@@ -11,5 +11,9 @@
 	"start_url": ".",
 	"display": "standalone",
 	"theme_color": "#000000",
-	"background_color": "#ffffff"
+	"background_color": "#ffffff",
+	"permissions": [
+		"clipboardRead",
+		"clipboardWrite"
+	]
 }
