mostly trying to get testing working, nothing completed

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "build": "cd client && npm run build && cd ../serverLambda && npm run build:lambda"
    },
    "dependencies": {
+      "@reduxjs/toolkit": "^1.6.1",
       "netlify-cli": "^2.59.2",
       "tailwindcss": "^1.2.0"
    },
