--- a/client/package.json
+++ b/client/package.json
@@ -49,8 +49,10 @@
       ]
    },
    "devDependencies": {
+      "@testing-library/dom": "^8.1.0",
       "@testing-library/jest-dom": "^4.2.4",
       "@testing-library/react": "^9.5.0",
+      "@testing-library/user-event": "^13.2.1",
       "enzyme": "^3.11.0",
       "enzyme-adapter-react-16": "^1.15.2",
       "react-test-renderer": "^16.13.1",
