--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,14 @@
       "graphql": "^15.0.0",
       "html-to-react": "^1.4.2",
       "http-proxy-middleware": "^0.21.0",
-      "ramda": "^0.26.1",
+      "ramda": "^0.27.1",
       "react": "^16.13.1",
       "react-dom": "^16.13.1",
       "react-redux": "^7.2.0",
       "react-scripts": "^3.4.1",
       "redux": "^4.0.5",
       "redux-form": "^8.3.1",
-      "redux-thunk": "^2.3.0",
-      "typescript": "^3.8.3"
+      "redux-thunk": "^2.3.0"
    },
    "scripts": {
       "start": "react-scripts start",
@@ -63,3 +62,6 @@
       "redux-mock-store": "^1.5.4"
    }
 }
+
+TODO NEXT:
+this 
