--- a/client/package.json
+++ b/client/package.json
@@ -5,19 +5,19 @@
    "author": "Simon Amarasingham",
    "private": true,
    "dependencies": {
-      "@apollo/react-hooks": "^3.1.5",
+      "@apollo/client": "^3.5.7",
+      "@apollo/react-hooks": "^4.0.0",
       "apollo-boost": "^0.4.9",
       "apollo-cache-inmemory": "^1.6.5",
       "apollo-client": "^2.6.8",
       "apollo-link-http": "^1.5.17",
-      "axios": "^0.24.0",
-      "graphql": "^15.0.0",
+      "graphql": "^15.8.0",
       "http-proxy-middleware": "^2.0.1",
-      "ramda": "^0.27.2",
-      "react": "^16.13.1",
-      "react-dom": "^16.13.1",
+      "ramda": "^0.28.0",
+      "react": "^17.0.2",
+      "react-dom": "^17.0.2",
       "react-redux": "^7.2.6",
-      "react-scripts": "^3.4.1",
+      "react-scripts": "^5.0.0",
       "redux": "^4.1.2",
       "redux-thunk": "^2.4.1"
    },
