--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,11 @@
-# root netlify.toml
-[build]
-  command = "npm run build"
-  publish = "client/build" # directory where deploy-ready HTML files etc are. Don't seem to need to specify this as it is set in the UI 
+[functions]
+  # this is where "Netlify can find your function sources, including background functions. 
+  # Netlify will access this directory during every deploy, zipping and deploying each supported code file as a function"
+  directory = "serverLambda/lambdaFunctions/"
 
-# note: each of these fields are OPTIONAL, with an exception that when you're specifying "command" and "port", you must specify framework = "#custom"
+[build]
+  command = "npm run build"  # this gets run in production to do the build
+  publish = "client/build" # directory where deploy-ready HTML files etc are. THis value can be set in the UI also, but this entry will override it 
+
 [dev]
-  command = "npm run dev" # Command to start your dev server
-  targetPort = 5000 # The port for your application server, framework or site generator
-  framework = "#custom"
-  publish = "client/public" # The path to your static content folder
-  # jwtRolePath = "app_metadata.authorization.roles" # Object path we should look for role values for JWT based redirects
-  autoLaunch = true # a Boolean value that determines if Netlify Dev launches the local server address in your browser
+publish = "client/public" # The path to your static content folder
