--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
    "devDependencies": {
       "concurrently": "^7.0.0",
       "netlify-cli": "^9.13.5",
-      "nodemon": "^2.0.15",
-		"react-scripts": "^5.0.0"
+      "nodemon": "^2.0.15"
    }
 }
