--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
 		"start": "cd client && npm run start",
-      "tailwind:css": "tailwind build client/src/css/tailwind.src.css -c client/tailwind.config.js -o client/src/css/tailwind.css",
+      "tailwind:css": "tailwind build -i client/src/css/tailwind.src.css -c client/tailwind.config.js -o client/src/css/tailwind.css",
       "postinstall": "cd serverLambda && npm install && cd ../client && npm install",
       "prebuild": "npm run tailwind:css",
       "build": "cd client && npm run build",
