--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
    "dependencies": {
       "@apollo/client": "^3.5.7",
       "@apollo/react-hooks": "^4.0.0",
+      "draft-js": "^0.11.7",
       "graphql": "^16.3.0",
+      "html-react-parser": "^1.4.12",
       "http-proxy-middleware": "^2.0.1",
       "ramda": "^0.28.0",
       "react": "^17.0.2",
