removing draftJs in progress

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -33,6 +33,9 @@ check-mark.svg
 verification-checkmark-symbol.svg
 
 #temp/old stuff
+/components/molecules/CellInPlaceEditorChanges
+sansDraftJs.js
+withDraftJs.js
 /oldTests
 oldFilterSheetFns.js
 ramdaTests.js
